epic: multi-threaded javac